--- a/app/templates/cliniclocator.html
+++ b/app/templates/cliniclocator.html
@@ -47,168 +47,117 @@
 L.marker([37.7793, -122.2308]).addTo(map).bindPopup(
     "<strong>Cesar Chavez Field</strong><br>" +
     "<b>Schedule:</b> Hours: Monday-Friday 9:00 AM - 5:00 PM<br>" +
-    "<b>Quality:</b> 4.1 stars rated <br>" +
-    "<b>Address: </b> Address: 29th Ave, Oakland, CA 94601 <br>" +
-    "<b>Image:</b><br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4nrLoCFw_CCbPO46N3GSLlSXLEaIZS0c9IkE9GaRCkuI8GNpQnxHQS4u_k2a5cKh2T2dDtazscn2oZlF76yPnOY4NjGrqnMJGMKoDbtkv3LaKyORMeXvC4oL4CFgYsVtXvunbyJy1w=s1360-w1360-h1020' alt='Cesar Chavez Field' height= '200px' width='200px' />"
+    "<b>Address: </b> Address: 29th Ave, Oakland, CA 94601 <br>" 
 );
 
 L.marker([37.7900, -122.3040]).addTo(map).bindPopup(
     "<strong>Alameda Point Soccer Field</strong><br>" +
     "<b>Schedule:</b> Hours: Sunday-Friday 8:00 AM - 8:00 PM<br>" +
-    "<b>Quality:</b> 41 stars rated <br>" +
-    "<b>Adress:</b> Lexington St, Alameda, CA 94501 <br>"+
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4nookeWbu5miS9FIGOqGFP5_fVlO9YCxZ758h81bowN81mhpz9G0XLjRWJlIsMN98neV9Jf1fxchkyetrbsASAy0IT-RQ2F6hQLtg7bB1iaOLgbAf7lMk5h0nNrqaUUVX4WKLjn5=s1360-w1360-h1020' alt='Alameda Point Soccer Field' height= '200px' width='200px' />"
+    "<b>Adress:</b> Lexington St, Alameda, CA 94501 <br>"
 );
 L.marker([37.7726, -122.3931]).addTo(map).bindPopup(
     "<strong>SFF Soccer - Mission Bay Field</strong><br>" +
     "<b>Schedule:</b> Hours: Opens 24 hours<br>" +
-    "<b>Quality:</b> 4.1 stars rated <br>" +
-    "<b>Adress:</b> 701 Mission Bay Boulevard North, San Francisco, CA 94158<br>"+
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4nqEhAT-ZNwF5dk0m2gBDld548S6gNztM7alGuNwXd-SRnFPev2eky5fxd8wv32W5fF4GW3x8nuCr4PmcK3LhM1JDFEiaTUYAwe8uuRWy60EVWiAzIjPMydOR61j_nxVfn9wcSsKUQ=s1360-w1360-h1020' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b> 701 Mission Bay Boulevard North, San Francisco, CA 94158<br>"
 );
 
 L.marker([37.779602956392786, -122.29214260649589]).addTo(map).bindPopup(
     "<strong>SFF Soccer - Main Street Field</strong><br>" +
     "<b>Schedule:</b> Hours: Opens 24 hours<br>" +
-    "<b>Quality:</b> 4.3 stars rated <br>" +
-    "<b>Adress:</b> 2040 Main St, Alameda, CA 94501<br>"+
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npXxDDUZWkEY-z_kvb9wnoLQWDCgbz6MF7mibILnUp9MFOgZpAK9hQg_bnsRct7gpkAieg_jqsnfdsAHO-3QZLSZmtrzo6zoJVNwNQkuGKFdJtyLnwKE-gwcaPKi8ELOCxYkVCKcw=w408-h305-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b> 2040 Main St, Alameda, CA 94501<br>"
 );
 L.marker([37.78282462782807, -122.30122469115]).addTo(map).bindPopup(
     "<strong>Sofive Soccer Centers Alameda</strong><br>" +
     "<b>Schedule:</b> Hours: Sunday-Friday 8:00 AM - 1:00AM<br>" +
-    "<b>Quality:</b> 4.8 stars rated <br>" +
-    "<b>Adress:</b> 800 W Tower Ave, Alameda, CA 94501<br>"+
-    "<img src='https://lh3.googleusercontent.com/p/AF1QipNQM4EDLY_8Vo_Ky-7N8u8W1sqS-1CNMxc4dkcJ=w408-h544-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b> 800 W Tower Ave, Alameda, CA 94501<br>"
 );
 L.marker([37.877586792489, -122.30840661437269]).addTo(map).bindPopup(
     "<strong>Tom Bates Regional Sports Complex</strong><br>" +
     "<b>Schedule:</b> Hours: Sunday-Friday 8:00 AM - 11:00PM<br>" +
-    "<b>Quality:</b> 4.4 stars rated <br>" +
-    "<b>Adress:</b> 800 W Tower Ave, Alameda, CA 94501<br>"+
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npC4v1G7M-r-3R5gljnJ9AdUNC1GW-bNHYJrsUy-iwGxAawl_P0CqbDK5wAVtXVP8bFP3k8qod1jJZtzUnxMNXZyBGxuQF0_7ebHlpGoPArTaRoX5iMBS4Hq3kW9y5I2Fw8TWIAJw=w426-h240-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b> 400-408 Gilman St, Berkeley, CA 94710<br>"
 );
 L.marker([37.78309607165369, -122.22895514829786]).addTo(map).bindPopup(
     "<strong>Oakland Soccer Club</strong><br>" +
     "<b>Schedule:</b> Hours: Opens 24 hours<br>" +
-    "<b>Quality:</b> 5.0 stars rated <br>" +
-    "<b>Adress:</b> 2825 International Blvd, Oakland, CA 94602<br>"+
-    "<img src='https://lh3.googleusercontent.com/p/AF1QipMoxTfb1h9umFGb8TR1eSvphUXP0z-WUmULugjZ=w408-h272-k-no' alt='Mission Bay Field' height= '300px' width='300px' />"
+    "<b>Adress:</b> 2825 International Blvd, Oakland, CA 94602<br>"
 );
 L.marker([37.74930265586374, -122.16330208004608]).addTo(map).bindPopup(
     "<strong>Elmhurst Soccer Field</strong><br>" +
     "<b>Schedule:</b> N/A <br>" +
-    "<b>Quality:</b> 5.0 stars rated <br>" +
-    "<b>Adress:</b> 9869 Plymouth St, Oakland, CA 94603<br>" +
-    "<img src='https://streetviewpixels-pa.googleapis.com/v1/thumbnail?panoid=f3jyXPIJfjmitQLUYbOK1A&cb_client=search.gws-prod.gps&w=408&h=240&yaw=58.366467&pitch=0&thumbfov=100' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b> 9869 Plymouth St, Oakland, CA 94603<br>" 
 );
 L.marker([37.73406438459924, -122.2408003303026]).addTo(map).bindPopup(
     "<strong>Soccer Field</strong><br>" +
     "<b>Schedule:</b> Hours: Opens 24 hours <br>" +
-    "<b>Quality:</b> 5.0 stars rated <br>" +
-    "<b>Adress:</b>Bay Farm Island, Alameda, CA 94502 <br>" +
-    "<img src='https://streetviewpixels-pa.googleapis.com/v1/thumbnail?panoid=IsFXNooB9n-k3c55UOOWqA&cb_client=search.gws-prod.gps&w=408&h=240&yaw=74.48003&pitch=0&thumbfov=100' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>Bay Farm Island, Alameda, CA 94502 <br>" 
 );
 L.marker([37.79308304800036, -122.51178541846905]).addTo(map).bindPopup(
     "<strong>Beach Chalet Athletic Fields</strong><br>" +
     "<b>Schedule:</b> Hours: Sunday-Friday 5:00 AM - 12:00 AM <br>" +
-    "<b>Quality:</b> 4.7 stars rated <br>" +
-    "<b>Adress:</b>1400-1598 John F Kennedy Dr, San Francisco, CA 94121<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npmv1NtOx5vNuYhyKf97z2PgaXwz_X8Ol6kAEFTaKUP5i_dZQp8CfvSXb0Y5uZjOSYao-xDNm0mv-LsX-LVYxrZEmtpIpzTnBl6KGmvmdUgLFSShClmdyFbOo49vK6ZQnxiba7w=w408-h306-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>1400-1598 John F Kennedy Dr, San Francisco, CA 94121<br>" 
 );
 L.marker([37.762690797995894, -122.50491896345716]).addTo(map).bindPopup(
     "<strong>South Sunset Soccer Fields/strong><br>" +
     "<b>Schedule:</b> Hours: Sunday-Friday 6:00 AM - 10:00 AM <br>" +
-    "<b>Quality:</b> 4.7 stars rated <br>" +
-    "<b>Adress:</b>San Francisco, CA 94116<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npH1uM34iXynKOOdbkOGmGilaY7UjSJHQ_NUD4lVIwqbLWXmaHzlCYVlzqCbjPJRlUYeg8wgKLDTeQhe3vhDo89zdVrID_7Kxn-t4nNvRND2fyZ5dLVbhHO6Y-tK_gmmz55GUrv=w408-h270-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
-);
-L.marker([38.58680625818449, -121.50388537987158]).addTo(map).bindPopup(
-    "<strong>Street Soccer USA/strong><br>" +
-    "<b>Schedule:</b> Hours: Sunday-Friday 5:00 PM - 9:00 PM <br>" +
-    "<b>Quality:</b> 4.9 stars rated <br>" +
-    "<b>Adress:</b>2408 8th St, Sacramento, CA 95818<br>" +
-    "<img src='https://lh3.googleusercontent.com/p/AF1QipNvVSEK9M9c8cIeQ-yoqZP-ww3aOqKqfSkWBxuo=w408-h306-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>San Francisco, CA 94116<br>" 
 );
 L.marker([38.58787970244649, -121.31574451254566]).addTo(map).bindPopup(
-    "<strong>Mather Sports Center North Soccer Field/strong><br>" +
+    "<strong>Mather Sports Center North Soccer Field</strong><br>" +
     "<b>Schedule:</b> Hours: Sunday-Friday 10:00 AM - 8:00 PM <br>" +
-    "<b>Quality:</b> 4.6 stars rated <br>" +
-    "<b>Adress:</b>3700 Schriever Ave, Mather, CA 95655<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4nqfN2IRM2Hd_8ET77_RIEfzRtGyRWc6F51WhZYM--Cm9m17Qt5CX5TTARGpXgXsUHCMTs4IFcTwSIkvrRs_WqxXJsR8vNDhsiQOP-VyrSxKWVjOhZrK4Xb9dwhXWwGUJ8T_MyRB=w493-h240-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>3700 Schriever Ave, Mather, CA 95655<br>" 
 );
 L.marker([37.87701749964257, -122.2514635430702]).addTo(map).bindPopup(
-    "<strong>Maxwell Family Field/strong><br>" +
+    "<strong>Maxwell Family Field</strong><br>" +
     "<b>Schedule:</b> Hours: N/A <br>" +
-    "<b>Quality:</b> 4.5 stars rated <br>" +
-    "<b>Adress:</b>2205 Piedmont Ave, Berkeley, CA 94704<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4nqL45JzFmYtmAh4K1afP4ZoKZd3zIup07OBAKFN5E8ar3pPEjABGXvvqXysZLdO_HrX82L_bPPLh2V3A_765GV6dq4Ji3B3OgCMe4sQLsYlKnYX_WvbW2_z--ek0k1cA1r0edg4mQ=w408-h544-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>2205 Piedmont Ave, Berkeley, CA 94704<br>" 
 );
 L.marker([37.857774335535936, -122.28339255887552]).addTo(map).bindPopup(
-    "<strong>San Pablo Park/strong><br>" +
+    "<strong>San Pablo Park</strong><br>" +
     "<b>Schedule:</b> Hours: Sunday-Friday 6:00 AM - 10:00 PM <br>" +
-    "<b>Quality:</b> 4.5 stars rated <br>" +
-    "<b>Adress:</b>2800 Park St, Berkeley, CA 94702<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npE4enwhBxPJy35oDU9Qsa8g6svaL5NNW8SZFuliExon0Me8u4owJ40kcOvJA5IbN1ibPUvVx94l9MoCn3NFsCpsV5pVpK-QL1qgk-ghoz-czhwd9K1iMYPVc2JH_NJjdR_DQnf=w408-h306-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>2800 Park St, Berkeley, CA 94702<br>" 
 );
 L.marker([37.644851688480394, -122.10711228268035]).addTo(map).bindPopup(
-    "<strong>Alden E. Oliver Sports Park/strong><br>" +
+    "<strong>Alden E. Oliver Sports Park</strong><br>" +
     "<b>Schedule:</b> Hours: Opens 24 Hours <br>" +
-    "<b>Quality:</b> 4.5 stars rated <br>" +
-    "<b>Adress:</b>2580 Eden Park Pl, Hayward, CA 94545<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4np2eSULMJtpoa4hy1okY8-9JKKz33xab4ADEVHw4nHg0ZxulE8BviGdcNo19CiUeDgdXOWKnoPSXNbjKu5prrha2-tER46rZWLb5HeD-26oaaqIYcZ6rx0ExtrYzUC53ZhLnwZT=w408-h306-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>2580 Eden Park Pl, Hayward, CA 94545<br>" 
 );
 L.marker([37.644851688480394, -122.09337937265654]).addTo(map).bindPopup(
-    "<strong>Richard H. Sheridan Soccer Field/strong><br>" +
+    "<strong>Richard H. Sheridan Soccer Field</strong><br>" +
     "<b>Schedule:</b> Hours: N/A <br>" +
-    "<b>Quality:</b> 4.6 stars rated <br>" +
-    "<b>Adress:</b>456 009700100, Hayward, CA 94545<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4noIsVYR8n-ascWnPZ7uH6T3lHJ1Wx4lpBt_SY-DFbI1W_PfNwl-cUlrvC34bi6F1pGVUP9EfLaXB_a6f3hZZmEHj9EdHVaj3bI-_cfErXDco4uZyYek7sjjYhqLnoYHS2LgH-TX=w533-h240-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>456 009700100, Hayward, CA 94545<br>" 
 );
 L.marker([37.71467857417502, -122.16111947809902]).addTo(map).bindPopup(
-    "<strong>Burrell Field/strong><br>" +
+    "<strong>Burrell Field</strong><br>" +
     "<b>Schedule:</b> Hours: N/A <br>" +
-    "<b>Quality:</b> 4.5 stars rated <br>" +
-    "<b>Adress:</b>San Leandro, CA 94577<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npK_yt0c47lqKuxggIWilHgWWtJ98uEEPB0l2OFJCI7P-KNBJcFhY7zJpv8k3dxyYVD8uRMLTUWD6xh2ifC23fKR4rgG4eGZrX9pNgUt0CUBcKpo8HU6e4aZEso943pHvfNfBzIxg=w408-h544-k-no' alt='Mission Bay Field' height= '200px' width='200px' />"
+    "<b>Adress:</b>San Leandro, CA 94577<br>" 
 );
 L.marker([37.7102, -122.4662]).addTo(map).bindPopup(
     "<strong>Crocker Amazon Soccer Fields</strong><br>" +
     "<b>Schedule:</b> Hours: Daily 6:00 AM - 10:00 PM<br>" +
-    "<b>Quality:</b> 4.6 stars rated<br>" +
-    "<b>Address:</b> 799 Moscow St, San Francisco, CA 94112<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4nqmHzVCvDnQqDdOpE3oC3inY6JVvx5GD8vjvXGxnCCZE96s0x7W8JKlwdUdn9vizJPyZgQZzYyLj3RQyCOufe5rAOJF3y1Kks8u0xqGTZEvNtnF44o-RDM7yj50VWxh2FG-2wQzeA=w408-h306-k-no; alt='Crocker Amazon' height='200px' width='200px' />"
+    "<b>Address:</b> 799 Moscow St, San Francisco, CA 94112<br>" 
 );
 
 L.marker([37.8047, -122.2711]).addTo(map).bindPopup(
     "<strong>Laney College Soccer Field</strong><br>" +
     "<b>Schedule:</b> Hours: Daily 7:00 AM - 9:00 PM<br>" +
-    "<b>Quality:</b> 4.3 stars rated<br>" +
-    "<b>Address:</b> 900 Fallon St, Oakland, CA 94607<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4nqmU_wiOuM4hJT0wxUBeDjWETvZZ7F__RB-UarWsNre2nAnxge6lzfNN8YM-UBcU_WX-vuOeo4XfsdETRCbpVIABq_K2NlbB0UPVNQgUcYNsujQlqwJ_iOq3PhTbuzdopRv-7T3=w408-h306-k-no' alt='Laney College Field' height='200px' width='200px' />"
-);
-
-L.marker([37.7038, -121.7759]).addTo(map).bindPopup(
-    "<strong>Livermore Community Park</strong><br>" +
-    "<b>Schedule:</b> Hours: Daily 6:00 AM - 8:00 PM<br>" +
-    "<b>Quality:</b> 4.4 stars rated<br>" +
-    "<b>Address:</b> 4444 East Ave, Livermore, CA 94550<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4nrgyCt--Pi0LNmfLmYEWbfRKdplb2m8u-tFDnJ9P-fHy1RI8UXbskgCxJKDQ0urW6qr9drMBi-Qd4DkfPZX8pVQ-HdMIg5sTp9VzB7k1EvERwTXBk9V2TRB3NV-JrVP0BvfHFL-hA=w408-h306-k-no' alt='Livermore Soccer Field' height='200px' width='200px' />"
+    "<b>Address:</b> 900 Fallon St, Oakland, CA 94607<br>" 
 );
 L.marker([37.7817, -122.2709]).addTo(map).bindPopup(
     "<strong>William Payne Field</strong><br>" +
     "<b>Schedule:</b> Hours: Daily 8:00 AM - 10:00 PM<br>" +
     "<b>Quality:</b> 4.5 stars rated<br>" +
-    "<b>Address:</b> 4100 Foothill Blvd, Oakland, CA 94601<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npU6GAiApFL2hkncwhF-6h-OBRY2nD__7YQ2McCJuToUjDmK3Nl_UeLQdPsOE5bGFdlQgZUqybRjwuac2smcBVB89vLgqP6-aLsuKk7a3AYP-Qntzhbnj4RACmbhvVM1ulLVVGcug=w408-h306-k-no' alt='William Payne Field' height='200px' width='200px' />"
+    "<b>Address:</b> 4100 Foothill Blvd, Oakland, CA 94601<br>" 
 );
 L.marker([37.66618555008935, -122.10588200724013]).addTo(map).bindPopup(
     "<strong>Chabot Colllege Soccer Field</strong><br>" +
     "<b>Schedule:</b> Hours: Monday-Friday 7:00 AM - 10:00 PM<br>" +
-    "<b>Quality:</b> 4.9 stars rated<br>" +
-    "<b>Address:</b> 25555 Hesperian Blvd, Hayward, CA 94545<br>" +
-    "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npAeO78IIA4jpdNrGcNuhNOyclHkCCbgXzVRHRe3c9oJ0WOnqiSkiOVN_kqrifv6RsBR4nim9hh87TTLL9z0EPy2MbuDBzFmRbZ-6FEWF0HvGT0mYsvkn4P_kB2s_3yhhY0kJMR=w408-h306-k-no' alt='William Payne Field' height='200px' width='200px' />"
+    "<b>Address:</b> 25555 Hesperian Blvd, Hayward, CA 94545<br>" 
+);
+
+L.marker([37.43327554005227, -122.15807470251649]).addTo(map).bindPopup(
+    "<strong>Maloney Field (Stanford</strong><br>" +
+    "<b>Schedule:</b> Hours: Monday-Friday 7:00 AM - 10:00 PM<br>" +
+    "<b>Address:</b> 641 Campus Dr, Stanford, CA 94305<br>" 
 );
 // Repeat similarly for the rest of the fields...
 
