--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -4,7 +4,7 @@
       <!-- Logo & Intro -->
       <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 text-center text-md-start">
         <img src="https://www.pngkit.com/png/full/7-73385_free-icons-png-red-graduation-cap-png.png" alt="Capstone Logo" width="100" class="mb-3">
-        <p class="text-muted"> This app was crafted by students with passion, innovation. Thanks for supporting our journey!</p>
+        <p class="text-muted"> Thanks for supporting our journey</p>
       </div>
  
  
