--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -18,7 +18,7 @@
         <li class="nav-item"><a class="nav-link" href="/aboutus">About Us</a></li>
         <li class="nav-item"><a class="nav-link" href="/blogs">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="/reviews">Review</a></li>
-        <li class="nav-item"><a class="nav-link" href="/clinic/map">Fields</a></li>
+        <li class="nav-item"><a class="nav-link" href="/clinic/map">Field Location</a></li>
         <li class="nav-item"><a class="nav-link" href="/clinic/list">List</a></li>
       </ul>
  
