--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,11 +25,11 @@
    </div>
    <div class="col-md-4 mb-4">
      <h4 class="fw-bold">Book or Drop In</h4>
-     <p>Check field availability in real time. Reserve a field for your group or find pickup games that welcome new players.</p>
+     <p>Check field availability. Reserve a field for your group or find pickup games that welcome new players.</p>
    </div>
    <div class="col-md-4 mb-4">
      <h4 class="fw-bold">Connect with Players</h4>
-     <p>Create a profile, build your team, or join others who love the game just as much as you do. Soccer is more fun with friends!</p>
+     <p>Create a profile and join others who love the game.!</p>
    </div>
  </div>
 </div>
