--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -1,111 +1,100 @@
-<!-- This is a blank template.  You can copy this to make a new template page. -->
-
-
 {% extends 'base.html' %}
-
 
 {% block body %}
 <div class="container m-5">
-   <div class="row">
-     <div class="col" style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: x-large; color:#995dd8">
-       {% if review %}
-   {{moment(review.create_date).calendar()}} by {{review.author.fname}} {{review.author.lname}}
-   {% if review.modifydate %}
-       modified {{moment(review.modifydate).calendar()}}
-   {% endif %}
-   <br>
-   {% if review.author == current_user %}
-       <a data-toggle="tooltip" data-placement="top" title="Edit Review" href="/review/edit/{{review.id}}">
-           <img width="40" class="bottom-image" src="/static/edit.png">
-       </a>
-       <a data-toggle="tooltip" data-placement="top" title="Delete Review" href="/review/delete/{{review.id}}">
-           <img width="40" class="bottom-image" src="/static/delete.png">
-       </a>
-   {% endif %}
-   <br>
-   <h1 class="display-5" style="font-family:Georgia, 'Times New Roman', Times, serif; color:#30436c">{{review.name}}</h1>
-   <br>
-   <h1 class="display-5" style="font-family:Georgia, 'Times New Roman', Times, serif; color:#30436c"> Experience: {{review.subject}}</h1>
-   <br>
-   <h1 class="display-5" style="font-family:Georgia, 'Times New Roman', Times, serif; color:#30436c"> Rating 0-10: {{review.rating}}</h1>
-   <br>
-   <h3 style="font-family:Georgia, 'Times New Roman', Times, serif; color:#267496">{{review.text}}</h3>
-   <a href="/reply/newRev/{{review.id}}" class="btn btn-primary btn-sm" role="button" style="font-family:Georgia, 'Times New Roman', Times, serif ; color:#ffffff; width:100px; height:50px; font-size: x-large;">Reply</a>
-   <br><br>
+    <div class="row">
+        <!-- Review Details -->
+        <div class="col" style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large; color:#995dd8">
+            {% if review %}
+                <div>
+                    <p>{{ moment(review.create_date).calendar() }} by {{ review.author.fname }} {{ review.author.lname }}</p>
+                    {% if review.modifydate %}
+                        <p>Modified: {{ moment(review.modifydate).calendar() }}</p>
+                    {% endif %}
+                    <br>
+                    
+                    {% if review.author == current_user %}
+                        <a data-toggle="tooltip" data-placement="top" title="Edit Review" href="/review/edit/{{ review.id }}">
+                            <img width="40" class="bottom-image" src="/static/edit.png">
+                        </a>
+                        <a data-toggle="tooltip" data-placement="top" title="Delete Review" href="/review/delete/{{ review.id }}">
+                            <img width="40" class="bottom-image" src="/static/delete.png">
+                        </a>
+                    {% endif %}
+                    <br>
+                    
+                    <h1 class="display-5 review-title">{{ review.name }}</h1>
+                    <h2 class="display-5 review-experience">Experience: {{ review.subject }}</h2>
+                    <h3 class="display-5 review-rating">Rating 0-10: {{ review.rating }}</h3>
+                    <p class="review-text">{{ review.text }}</p>
+                    
+                    <a href="/reply/newRev/{{ review.id }}" class="btn btn-primary btn-sm reply-btn" role="button">
+                        Reply
+                    </a>
+                    <br><br>
 
+                    <!-- Display Replies -->
+                    {% set data = namespace(l_bool=false) %}
+                    {% set list = namespace(replyList=replies|list) %}
 
-   {% set data = namespace(l_bool=false) %}
-   {% set list = namespace(replyList=replies|list) %}
+                    {% if list.replyList|length != 0 %}
+                        <h2 class="display-5 replies-heading">Replies</h2>
+                        
+                        {% for number in range(1, 1000) if data.l_bool == false %}
+                            {% set reply = list.replyList.pop(0) %}
+                            {% set marg = [] %}
+                            {% set border = namespace(txt='') %}
 
+                            {% if reply.outer != True %}
+                                {% set border.txt = "1px solid white" %}
+                                {% for i in range(reply.dFromOuter|int) %}
+                                    <div hidden="true">{{ marg.append(1) }}</div>
+                                {% endfor %}
+                            {% endif %}
 
-   {% if list.replyList|length != 0 %}
-  
-   <h1 class="display-5" style="font-family:Georgia, 'Times New Roman', Times, serif; color:#4b4691">Replies</h1>
-   {% for number in range(1,1000) if data.l_bool == false %}
+                            <div style="margin-left: {{ marg|length * 50 }}px;">
+                                {% if current_user == reply.author %}
+                                    <a href="/reply/delete/{{ reply.id }}">
+                                        <img width="20" src="/static/delete.png">
+                                    </a>
+                                    <a href="/reply/edit/{{ reply.id }}">
+                                        <img width="20" src="/static/edit.png">
+                                    </a>
+                                {% endif %}
 
+                                <p>{{ reply.author.fname }} {{ reply.author.lname }}, {{ current_user.role }}: 
+                                    {{ moment(reply.create_date).calendar() }}
+                                    {% if reply.modify_date %}
+                                        (modified {{ moment(reply.modify_date).calendar() }})
+                                    {% endif %}
+                                </p>
 
-       {% set reply = list.replyList.pop(0) %}
-       {% set marg = [] %}
-       {% set border = namespace(txt = '') %}
+                                <p class="reply-text">{{ reply.text }}</p>
 
+                                {% if reply.replies is not none %}
+                                    {% for innerReply in reply.replies|reverse %}
+                                        <p hidden="true">{{ list.replyList.insert(0, innerReply) }}</p>
+                                    {% endfor %}
+                                {% endif %}
 
-       {% if reply.outer != True %}
-           {% set border.txt = "1px solid white" %}
-               {% for i in range(reply.dFromOuter|int) %}
-                   <div hidden="true">{{ marg.append(1) }}</div>
-               {% endfor %}
-       {% endif %}
-      
-       <div style="margin-left: ((marg count * 50))px;">
-           {% if current_user == reply.author %}
-               <a href="/reply/delete/{{reply.id}}"><img width="20" src="/static/delete.png"></a>
-               <a href="/reply/edit/{{reply.id}}"><img width="20" src="/static/edit.png"></a>
-           {% endif %}
+                                <a href="/reply/newRep/{{ review.id }}/{{ reply.id }}" class="btn btn-primary btn-sm reply-btn" role="button">
+                                    Reply
+                                </a>
+                                <br>
+                            </div>
 
-
-           {{reply.author.fname}} {{reply.author.lname}}, {{current_user.role}}: {{moment(reply.create_date).calendar()}} 
-           {% if reply.modify_date %}
-               (modified {{moment(reply.modify_date).calendar()}})
-           {% endif %}
-
-
-           <br>
-
-
-           <p class="fs-3" style="font-family:Georgia, 'Times New Roman', Times, serif; color:#544cc2; margin-bottom: 0px;">
-               {{reply.text}}
-           </p>
-
-
-           {% if reply.replies is not none %}
-               {% for innerReply in reply.replies|reverse %}
-                   <p hidden="true">{{ list.replyList.insert(0,innerReply) }}</p>
-               {% endfor %}
-           {% endif %}
-
-
-           <a href="/reply/newRep/{{review.id}}/{{reply.id}}" class="btn btn-primary btn-sm" role="button">Reply</a>
-           <br>
-       </div>
-
-
-       {% if list.replyList|length == 0 %}
-           {% set data.l_bool = true %}
-       {% endif %}
-
-
-   {% endfor %}
-   {% else %}
-       <h1 class="display-5" style="font-family:Georgia, 'Times New Roman', Times, serif; color:#544cc2">No Replies</h1>
-   {% endif %}
+                            {% if list.replyList|length == 0 %}
+                                {% set data.l_bool = true %}
+                            {% endif %}
+                        {% endfor %}
+                    {% else %}
+                        <h2 class="display-5 no-replies">No Replies</h2>
+                    {% endif %}
+                </div>
+            {% else %}
+                <p>No review found.</p>
+            {% endif %}
+        </div>
     </div>
-    <!-- <div class="col text-center">
-           {% if review.author.image %}
-                   <img width="300" class="img-thumbnail " src="data:image;base64,{{base64encode(review.author.image.read())}}">
-               {% endif %}
-           </div> -->
-       </div>
-      
-{% else %}
-{% endif %}
+</div>
 {% endblock %}
